# LanguageDetection

./: README.md  detector.py  main.py  pyproject.toml  setup.py  test.py
Detection/: main.py
Detection/DictDetector/: languages.json  main.py
Detection/DictDetector/dict/: ar.txt  de.txt  es.txt  sk.txt  uk.txt
DictDetector/: main.py
DictDetector/dict/: bg.txt  ca.txt  de.txt  en.txt  es.txt  it.txt  nb.txt  pl.txt  pt.txt  ru.txt  vi.txt
ShortLanguageDetection/: main.py
ShortLanguageDetection/DictDetector/: main.py
ShortLanguageDetection/DictDetector/dict/: da.txt  el.txt  en.txt  fr.txt  hi.txt  hu.txt  it.txt  ro.txt  sv.txt  tr.txt
ShortLanguageDetection/models/: discord_langdetect.ftz  langdetect.ftz
